removed lazy loading

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
               <img
                 src="images/food_samples/chicken Skewers.webp"
                 alt="Chicken Skewers"
-                loading="lazy"
               />
               <span class="title"
                 >Chicken Skewers with Slices of Sweet Peppers</span
@@ -129,7 +128,6 @@
               <img
                 src="images/food_samples/spaghetti_bolognese.webp"
                 alt="Spaghetti Bolognese"
-                loading="lazy"
               />
               <span class="title">Spaghetti Bolognese</span>
               <div class="mainIngredients">
@@ -161,7 +159,6 @@
               <img
                 src="images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
                 alt="Grilled Chicken"
-                loading="lazy"
               />
               <span class="title">Grilled Chicken with Herb Marinade</span>
               <div class="mainIngredients">
@@ -193,7 +190,6 @@
               <img
                 src="images/food_samples/beef_stir_fry.webp"
                 alt="Beef Stir Fry"
-                loading="lazy"
               />
               <span class="title">Beef Stir Fry</span>
               <div class="mainIngredients">
@@ -221,11 +217,7 @@
           <a href="pages/apple_pie.html">
             <div class="recipe">
               <div class="like"><i class="fa-solid fa-heart"></i></div>
-              <img
-                src="images/food_samples/apple_pie.webp"
-                alt="Apple Pie"
-                loading="lazy"
-              />
+              <img src="images/food_samples/apple_pie.webp" alt="Apple Pie" />
               <span class="title">Apple Pie</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -254,7 +246,6 @@
               <img
                 src="images/food_samples/French_Butter_Croissant.webp"
                 alt="Croissant"
-                loading="lazy"
               />
               <span class="title">French Butter Croissant</span>
               <div class="mainIngredients">
@@ -284,7 +275,6 @@
               <img
                 src="images/food_samples/Classic_Pancakes.webp"
                 alt="Pancakes"
-                loading="lazy"
               />
               <span class="title">Classic Pancakes</span>
               <div class="mainIngredients">
@@ -315,7 +305,6 @@
               <img
                 src="images/food_samples/vegetable_stir_fry.webp"
                 alt="Vegetable Stir Fry"
-                loading="lazy"
               />
               <span class="title">Vegetable Stir Fry</span>
               <div class="mainIngredients">
@@ -346,7 +335,6 @@
               <img
                 src="images/food_samples/chocolate_cake.webp"
                 alt="Chocolate Cake"
-                loading="lazy"
               />
               <span class="title">Chocolate Cake</span>
               <div class="mainIngredients">
@@ -377,7 +365,6 @@
               <img
                 src="images/food_samples/French_Baguette.webp"
                 alt="Baguette"
-                loading="lazy"
               />
               <span class="title">French Baguette</span>
               <div class="mainIngredients">
@@ -407,7 +394,6 @@
               <img
                 src="images/food_samples/french_toast.webp"
                 alt="French Toast"
-                loading="lazy"
               />
               <span class="title">French Toast</span>
               <div class="mainIngredients">
@@ -438,7 +424,6 @@
               <img
                 src="images/food_samples/roasted_vegetables.webp"
                 alt="Roasted Vegetables"
-                loading="lazy"
               />
               <span class="title">Roasted Vegetables</span>
               <div class="mainIngredients">
@@ -466,11 +451,7 @@
           <a href="pages/Cheesecake.html">
             <div class="recipe">
               <div class="like"><i class="fa-solid fa-heart"></i></div>
-              <img
-                src="images/food_samples/cheesecake.webp"
-                alt="Cheesecake"
-                loading="lazy"
-              />
+              <img src="images/food_samples/cheesecake.webp" alt="Cheesecake" />
               <span class="title">Cheesecake</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -499,7 +480,6 @@
               <img
                 src="images/food_samples/Indian_Naan_Bread.webp"
                 alt="Naan Bread"
-                loading="lazy"
               />
               <span class="title">Indian Naan Bread</span>
               <div class="mainIngredients">
@@ -529,7 +509,6 @@
             <img
               src="images/food_samples/Full_English_Breakfast.webp"
               alt="English Breakfast"
-              loading="lazy"
             />
             <span class="title">Full English Breakfast</span>
             <div class="mainIngredients">
@@ -557,7 +536,6 @@
             <img
               src="images/food_samples/eggplant_parmesan.webp"
               alt="Eggplant Parmesan"
-              loading="lazy"
             />
             <span class="title">Eggplant Parmesan</span>
             <div class="mainIngredients">
@@ -585,7 +563,6 @@
             <img
               src="images/food_samples/banana_bread.webp"
               alt="Banana Bread"
-              loading="lazy"
             />
             <span class="title">Banana Bread</span>
             <div class="mainIngredients">
@@ -613,7 +590,6 @@
             <img
               src="images/food_samples/Sourdough_Bread.webp"
               alt="Sourdough Bread"
-              loading="lazy"
             />
             <span class="title">Sourdough Bread</span>
             <div class="mainIngredients">
@@ -641,7 +617,6 @@
             <img
               src="images/food_samples/Cheese_Veggie_Omelette.webp"
               alt="Omelette"
-              loading="lazy"
             />
             <span class="title">Cheese & Veggie Omelette</span>
             <div class="mainIngredients">
@@ -669,7 +644,6 @@
             <img
               src="images/food_samples/vegetable_curry.webp"
               alt="Vegetable Curry"
-              loading="lazy"
             />
             <span class="title">Vegetable Curry</span>
             <div class="mainIngredients">
@@ -697,7 +671,6 @@
             <img
               src="images/food_samples/peach_crumble.webp"
               alt="Peach Crumble"
-              loading="lazy"
             />
             <span class="title">Peach Crumble</span>
             <div class="mainIngredients">
@@ -725,7 +698,6 @@
             <img
               src="images/food_samples/German_Soft_Pretzel.webp"
               alt="Pretzel"
-              loading="lazy"
             />
             <span class="title">German Soft Pretzel</span>
             <div class="mainIngredients">
@@ -753,7 +725,6 @@
             <img
               src="images/food_samples/Crispy_Belgian_Waffles.webp"
               alt="Waffles"
-              loading="lazy"
             />
             <span class="title">Crispy Belgian Waffles</span>
             <div class="mainIngredients">
@@ -781,7 +752,6 @@
             <img
               src="images/food_samples/Grilled_Lamb_Chops.webp"
               alt="Lamb Chops"
-              loading="lazy"
             />
             <span class="title">Grilled Lamb Chops</span>
             <div class="mainIngredients">
