--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               <img
                 src="images/food_samples/chicken Skewers.webp"
                 alt="Chicken Skewers"
+                loading="lazy"
               />
               <span class="title"
                 >Chicken Skewers with Slices of Sweet Peppers</span
@@ -126,8 +127,9 @@
             <div class="recipe">
               <div class="like"><i class="fa-solid fa-heart"></i></div>
               <img
-                src="images/food_samples/spaghetti_bolognese.webp"
+                src="images/food_samples/Spaghetti_Bolognese.webp"
                 alt="Spaghetti Bolognese"
+                loading="lazy"
               />
               <span class="title">Spaghetti Bolognese</span>
               <div class="mainIngredients">
@@ -159,6 +161,7 @@
               <img
                 src="images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
                 alt="Grilled Chicken"
+                loading="lazy"
               />
               <span class="title">Grilled Chicken with Herb Marinade</span>
               <div class="mainIngredients">
@@ -190,6 +193,7 @@
               <img
                 src="images/food_samples/beef_stir_fry.webp"
                 alt="Beef Stir Fry"
+                loading="lazy"
               />
               <span class="title">Beef Stir Fry</span>
               <div class="mainIngredients">
@@ -217,7 +221,11 @@
           <a href="pages/apple_pie.html">
             <div class="recipe">
               <div class="like"><i class="fa-solid fa-heart"></i></div>
-              <img src="images/food_samples/apple_pie.webp" alt="Apple Pie" />
+              <img
+                src="images/food_samples/apple_pie.webp"
+                alt="Apple Pie"
+                loading="lazy"
+              />
               <span class="title">Apple Pie</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -246,6 +254,7 @@
               <img
                 src="images/food_samples/French_Butter_Croissant.webp"
                 alt="Croissant"
+                loading="lazy"
               />
               <span class="title">French Butter Croissant</span>
               <div class="mainIngredients">
@@ -275,6 +284,7 @@
               <img
                 src="images/food_samples/Classic_Pancakes.webp"
                 alt="Pancakes"
+                loading="lazy"
               />
               <span class="title">Classic Pancakes</span>
               <div class="mainIngredients">
@@ -305,6 +315,7 @@
               <img
                 src="images/food_samples/vegetable_stir_fry.webp"
                 alt="Vegetable Stir Fry"
+                loading="lazy"
               />
               <span class="title">Vegetable Stir Fry</span>
               <div class="mainIngredients">
@@ -335,6 +346,7 @@
               <img
                 src="images/food_samples/chocolate_cake.webp"
                 alt="Chocolate Cake"
+                loading="lazy"
               />
               <span class="title">Chocolate Cake</span>
               <div class="mainIngredients">
@@ -365,6 +377,7 @@
               <img
                 src="images/food_samples/French_Baguette.webp"
                 alt="Baguette"
+                loading="lazy"
               />
               <span class="title">French Baguette</span>
               <div class="mainIngredients">
@@ -394,6 +407,7 @@
               <img
                 src="images/food_samples/french_toast.webp"
                 alt="French Toast"
+                loading="lazy"
               />
               <span class="title">French Toast</span>
               <div class="mainIngredients">
@@ -424,6 +438,7 @@
               <img
                 src="images/food_samples/roasted_vegetables.webp"
                 alt="Roasted Vegetables"
+                loading="lazy"
               />
               <span class="title">Roasted Vegetables</span>
               <div class="mainIngredients">
@@ -451,7 +466,11 @@
           <a href="pages/Cheesecake.html">
             <div class="recipe">
               <div class="like"><i class="fa-solid fa-heart"></i></div>
-              <img src="images/food_samples/cheesecake.webp" alt="Cheesecake" />
+              <img
+                src="images/food_samples/cheesecake.webp"
+                alt="Cheesecake"
+                loading="lazy"
+              />
               <span class="title">Cheesecake</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
@@ -480,6 +499,7 @@
               <img
                 src="images/food_samples/Indian_Naan_Bread.webp"
                 alt="Naan Bread"
+                loading="lazy"
               />
               <span class="title">Indian Naan Bread</span>
               <div class="mainIngredients">
@@ -509,6 +529,7 @@
             <img
               src="images/food_samples/Full_English_Breakfast.webp"
               alt="English Breakfast"
+              loading="lazy"
             />
             <span class="title">Full English Breakfast</span>
             <div class="mainIngredients">
@@ -536,6 +557,7 @@
             <img
               src="images/food_samples/eggplant_parmesan.webp"
               alt="Eggplant Parmesan"
+              loading="lazy"
             />
             <span class="title">Eggplant Parmesan</span>
             <div class="mainIngredients">
@@ -563,6 +585,7 @@
             <img
               src="images/food_samples/banana_bread.webp"
               alt="Banana Bread"
+              loading="lazy"
             />
             <span class="title">Banana Bread</span>
             <div class="mainIngredients">
@@ -590,6 +613,7 @@
             <img
               src="images/food_samples/Sourdough_Bread.webp"
               alt="Sourdough Bread"
+              loading="lazy"
             />
             <span class="title">Sourdough Bread</span>
             <div class="mainIngredients">
@@ -617,6 +641,7 @@
             <img
               src="images/food_samples/Cheese_Veggie_Omelette.webp"
               alt="Omelette"
+              loading="lazy"
             />
             <span class="title">Cheese & Veggie Omelette</span>
             <div class="mainIngredients">
@@ -644,6 +669,7 @@
             <img
               src="images/food_samples/vegetable_curry.webp"
               alt="Vegetable Curry"
+              loading="lazy"
             />
             <span class="title">Vegetable Curry</span>
             <div class="mainIngredients">
@@ -671,6 +697,7 @@
             <img
               src="images/food_samples/peach_crumble.webp"
               alt="Peach Crumble"
+              loading="lazy"
             />
             <span class="title">Peach Crumble</span>
             <div class="mainIngredients">
@@ -698,6 +725,7 @@
             <img
               src="images/food_samples/German_Soft_Pretzel.webp"
               alt="Pretzel"
+              loading="lazy"
             />
             <span class="title">German Soft Pretzel</span>
             <div class="mainIngredients">
@@ -725,6 +753,7 @@
             <img
               src="images/food_samples/Crispy_Belgian_Waffles.webp"
               alt="Waffles"
+              loading="lazy"
             />
             <span class="title">Crispy Belgian Waffles</span>
             <div class="mainIngredients">
@@ -752,6 +781,7 @@
             <img
               src="images/food_samples/Grilled_Lamb_Chops.webp"
               alt="Lamb Chops"
+              loading="lazy"
             />
             <span class="title">Grilled Lamb Chops</span>
             <div class="mainIngredients">
