--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         <h4>Today's Handpicked Delights – Ready to Cook!</h4>
         <div class="recipesList">
           <!--start-->
-          <a href="pages/Chicken_Skewers.html"
-            ><div class="recipe">
-              <div class="like"><i class="fa-solid fa-heart"></i></div>
+          <div class="recipe">
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <a href="pages/Chicken_Skewers.html">
               <img
-                src="images/food_samples/chicken Skewers.webp"
+                src="images/food_samples/Chicken_Skewers.webp"
                 alt="Chicken Skewers"
                 loading="lazy"
               />
@@ -118,9 +118,9 @@
                   <i class="fa-solid fa-utensils"></i
                   ><span class="mealType">Meat</span>
                 </div>
-              </div>
-            </div></a
-          >
+              </div></a
+            >
+          </div>
           <!--end-->
           <!--start-->
           <a href="pages/Spaghetti_Bolognese.html">
