--- a/pages/Chicken_Skewers.html
+++ b/pages/Chicken_Skewers.html
@@ -101,7 +101,7 @@
         </section>
         <section class="imageAndNutrition">
           <img
-            src="../images/food_samples/chicken Skewers.webp"
+            src="../images/food_samples/Chicken_Skewers.webp"
             alt="Chicken Skewers"
           />
           <div class="nutrition">
@@ -140,7 +140,9 @@
             occasion!
           </p>
         </section>
-        <h4>Ingredients</h4>
+        <section class="ingredientAndRecommendations">
+          <div class="ingredients">
+        <h2>Ingredients</h2>
         <form>
           <label
             ><input type="checkbox" class="customCheckbox" /> 2 chicken breasts,
@@ -182,8 +184,103 @@
             skewers</label
           ><br />
         </form>
-      <section class="instructions">
-        <h4>Instructions</h4>
+      </div>
+      <div class="recommendations">
+        <h4>You may also Like</h4>
+        <div class="separate">
+            <!--start-->
+            <div class="recipe">
+              <a href="pages/Chicken_Skewers.html">
+                <img
+                  src="../images/food_samples/Chicken_Skewers.webp"
+                  alt="Chicken Skewers"
+                  loading="lazy"
+                />
+                <div class="separate">
+                <span class="title"
+                  >Chicken Skewers with Slices of Sweet Peppers</span
+                >
+                <div class="mainIngredients">
+                  <span class="heading">Main Ingredients:</span>
+                  <div class="mainIngredientList">
+                    <span class="mainIngredient">Chicken</span>
+                    <span class="mainIngredient">Sweet Peppers</span>
+                  </div>
+                </div></div>
+              </a>
+            </div>
+            <!--next recipe-->
+            <div class="recipe">
+              <a href="pages/Chicken_Skewers.html">
+                <img
+                  src="../images/food_samples/Chicken_Skewers.webp"
+                  alt="Chicken Skewers"
+                  loading="lazy"
+                />
+                <div class="separate">
+                <span class="title"
+                  >Chicken Skewers with Slices of Sweet Peppers</span
+                >
+                <div class="mainIngredients">
+                  <span class="heading">Main Ingredients:</span>
+                  <div class="mainIngredientList">
+                    <span class="mainIngredient">Chicken</span>
+                    <span class="mainIngredient">Sweet Peppers</span>
+                  </div>
+                </div></div>
+              </a>
+            </div>
+            <!--next recipe-->
+            <!--next recipe-->
+            <div class="recipe">
+              <a href="pages/Chicken_Skewers.html">
+                <img
+                  src="../images/food_samples/Chicken_Skewers.webp"
+                  alt="Chicken Skewers"
+                  loading="lazy"
+                />
+                <div class="separate">
+                <span class="title"
+                  >Chicken Skewers with Slices of Sweet Peppers</span
+                >
+                <div class="mainIngredients">
+                  <span class="heading">Main Ingredients:</span>
+                  <div class="mainIngredientList">
+                    <span class="mainIngredient">Chicken</span>
+                    <span class="mainIngredient">Sweet Peppers</span>
+                  </div>
+                </div></div>
+              </a>
+            </div>
+            <!--next recipe-->
+            <!--next recipe-->
+            <div class="recipe">
+              <a href="pages/Chicken_Skewers.html">
+                <img
+                  src="../images/food_samples/Chicken_Skewers.webp"
+                  alt="Chicken Skewers"
+                  loading="lazy"
+                />
+                <div class="separate">
+                <span class="title"
+                  >Chicken Skewers with Slices of Sweet Peppers</span
+                >
+                <div class="mainIngredients">
+                  <span class="heading">Main Ingredients:</span>
+                  <div class="mainIngredientList">
+                    <span class="mainIngredient">Chicken</span>
+                    <span class="mainIngredient">Sweet Peppers</span>
+                  </div>
+                </div></div>
+              </a>
+            </div>
+            <!--next recipe-->
+        </div>
+      </div>
+      </section>
+      <section class="instructionsAndAds">
+        <div class="instructions">
+        <h2>Instructions</h2>
         <dl>
           <dt>1. Prepare the Marinade</dt>
           <dd>
@@ -266,9 +363,16 @@
             for an extra kick.
           </dd>
         </dl>
+      </div>
+      <div class="ads">
+        <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
+        <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
+        <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
+      </div>
       </section>
     </main>
     <footer>
+      <span class="logo">Recipe</span>
       <span>&copy;2025 | MOHAMMED ABDI </span>
     </footer>
   </body>
