--- a/pages/Chicken_Skewers.html
+++ b/pages/Chicken_Skewers.html
@@ -189,92 +189,93 @@
         <h4>You may also Like</h4>
         <div class="separate">
             <!--start-->
-            <div class="recipe">
-              <a href="pages/Chicken_Skewers.html">
-                <img
-                  src="../images/food_samples/Chicken_Skewers.webp"
-                  alt="Chicken Skewers"
-                  loading="lazy"
-                />
-                <div class="separate">
-                <span class="title"
-                  >Chicken Skewers with Slices of Sweet Peppers</span
-                >
-                <div class="mainIngredients">
-                  <span class="heading">Main Ingredients:</span>
-                  <div class="mainIngredientList">
-                    <span class="mainIngredient">Chicken</span>
-                    <span class="mainIngredient">Sweet Peppers</span>
-                  </div>
-                </div></div>
-              </a>
-            </div>
-            <!--next recipe-->
-            <div class="recipe">
-              <a href="pages/Chicken_Skewers.html">
-                <img
-                  src="../images/food_samples/Chicken_Skewers.webp"
-                  alt="Chicken Skewers"
-                  loading="lazy"
-                />
-                <div class="separate">
-                <span class="title"
-                  >Chicken Skewers with Slices of Sweet Peppers</span
-                >
-                <div class="mainIngredients">
-                  <span class="heading">Main Ingredients:</span>
-                  <div class="mainIngredientList">
-                    <span class="mainIngredient">Chicken</span>
-                    <span class="mainIngredient">Sweet Peppers</span>
-                  </div>
-                </div></div>
-              </a>
-            </div>
-            <!--next recipe-->
-            <!--next recipe-->
-            <div class="recipe">
-              <a href="pages/Chicken_Skewers.html">
-                <img
-                  src="../images/food_samples/Chicken_Skewers.webp"
-                  alt="Chicken Skewers"
-                  loading="lazy"
-                />
-                <div class="separate">
-                <span class="title"
-                  >Chicken Skewers with Slices of Sweet Peppers</span
-                >
-                <div class="mainIngredients">
-                  <span class="heading">Main Ingredients:</span>
-                  <div class="mainIngredientList">
-                    <span class="mainIngredient">Chicken</span>
-                    <span class="mainIngredient">Sweet Peppers</span>
-                  </div>
-                </div></div>
-              </a>
-            </div>
-            <!--next recipe-->
-            <!--next recipe-->
-            <div class="recipe">
-              <a href="pages/Chicken_Skewers.html">
-                <img
-                  src="../images/food_samples/Chicken_Skewers.webp"
-                  alt="Chicken Skewers"
-                  loading="lazy"
-                />
-                <div class="separate">
-                <span class="title"
-                  >Chicken Skewers with Slices of Sweet Peppers</span
-                >
-                <div class="mainIngredients">
-                  <span class="heading">Main Ingredients:</span>
-                  <div class="mainIngredientList">
-                    <span class="mainIngredient">Chicken</span>
-                    <span class="mainIngredient">Sweet Peppers</span>
-                  </div>
-                </div></div>
-              </a>
-            </div>
-            <!--next recipe-->
+<div class="recipe">
+  <a href="pages/Grilled_Chicken.html">
+    <img
+      src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
+      alt="Grilled Chicken"
+      loading="lazy"
+    />
+    <div class="separate little">
+      <span class="title">Grilled Chicken with Herb Marinade</span>
+      <div class="mainIngredients">
+        <span class="heading">Main Ingredients:</span>
+        <div class="mainIngredientList">
+          <span class="mainIngredient">Chicken</span>
+          <span class="mainIngredient">Olive Oil</span>
+          <span class="mainIngredient">Herbs</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<!--next recipe-->
+<!--next recipe-->
+<div class="recipe">
+  <a href="pages/Chocolate_Cake.html">
+    <img
+      src="../images/food_samples/Chocolate_Cake.webp"
+      alt="Chocolate Cake"
+      loading="lazy"
+    />
+    <div class="separate little">
+      <span class="title">Chocolate Cake</span>
+      <div class="mainIngredients">
+        <span class="heading">Main Ingredients:</span>
+        <div class="mainIngredientList">
+          <span class="mainIngredient">Cocoa Powder</span>
+          <span class="mainIngredient">Flour</span>
+          <span class="mainIngredient">Eggs</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<!--next recipe-->
+<div class="recipe">
+  <a href="pages/French_Toast.html">
+    <img
+      src="../images/food_samples/French_Toast.webp"
+      alt="French Toast"
+      loading="lazy"
+    />
+    <div class="separate little">
+      <span class="title">French Toast</span>
+      <div class="mainIngredients">
+        <span class="heading">Main Ingredients:</span>
+        <div class="mainIngredientList">
+          <span class="mainIngredient">Bread</span>
+          <span class="mainIngredient">Eggs</span>
+          <span class="mainIngredient">Milk</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<!--next recipe-->
+<div class="recipe">
+  <a href="pages/Vegetable_Curry.html">
+    <img
+      src="../images/food_samples/Vegetable_Curry.webp"
+      alt="Vegetable Curry"
+      loading="lazy"
+    />
+    <div class="separate little">
+      <span class="title">Vegetable Curry</span>
+      <div class="mainIngredients">
+        <span class="heading">Main Ingredients:</span>
+        <div class="mainIngredientList">
+          <span class="mainIngredient">Cauliflower</span>
+          <span class="mainIngredient">Spinach</span>
+          <span class="mainIngredient">Curry Powder</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<!--next recipe-->
+
+
         </div>
       </div>
       </section>
